# gca

./: CMakeLists.txt  Doxyfile.in
gca/: Mvec
matlab/: demo_rotate.m  gcamvec.cpp  make.m  mvec.m  mxMvec.cpp  mxMvec.h  rotor.m
python/: CMakeLists.txt  gca.cpp  test_mvec.py
src/: Blade.h  Mvec.h  Rotor.h  Sym.h  gca.h
tests/: CMakeLists.txt  test_blade.cpp  test_blades.cpp  test_gca.cpp  test_genb.cpp  test_genb.h  test_genm.cpp  test_mvec.cpp  test_mvecs.cpp  test_rotor.cpp  test_sym.cpp  test_vectors.cpp
